--- a/unit_a/Dockerfile
+++ b/unit_a/Dockerfile
@@ -8,14 +8,14 @@ ENV unitId $unitId
 # Install app dependencies
 # A wildcard is used to ensure both package.json AND package-lock.json are copied
 # where available (npm@5+)
-COPY package*.json ./
-COPY ../.env ./.env
+COPY ./unit_a/package.json ./
+COPY ./.env ./
 
 RUN npm install
 # If you are building your code for production
 # RUN npm ci --only=production
 
 # Bundle app source
-COPY . .
+COPY ./unit_a .
 
 CMD [ "node", "-r", "esm", "service.js" ]
