--- a/upload_unit/Dockerfile
+++ b/upload_unit/Dockerfile
@@ -12,7 +12,7 @@ ARG redisPort=$redisPort
 # Install app dependencies
 # A wildcard is used to ensure both package.json AND package-lock.json are copied
 # where available (npm@5+)
-COPY ./unit/package.json ./
+COPY ./upload_unit/package.json ./
 COPY ./.env ./
 RUN echo "unitId=${unitId}\n requestTimeout=${requestTimeout}\n logsExpire=${logsExpire}\n redisHost=${redisHost}\n redisPort=${redisPort}" >> .env
 
@@ -21,6 +21,6 @@ RUN npm install
 # RUN npm ci --only=production
 
 # Bundle app source
-COPY ./unit .
+COPY ./upload_unit .
 
 CMD [ "node", "-r", "esm", "service.js" ]
