--- a/upload_unit/package.json
+++ b/upload_unit/package.json
@@ -10,8 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.488.0",
     "dotenv": "^8.0.0",
     "esm": "^3.2.25",
-    "rednomic": "^3.0.12"
+    "rednomic": "^3.0.12",
+    "s3-stream-upload": "^2.0.2"
   }
 }
