--- a/download_unit/Dockerfile
+++ b/download_unit/Dockerfile
@@ -12,7 +12,7 @@ ARG redisPort=$redisPort
 # Install app dependencies
 # A wildcard is used to ensure both package.json AND package-lock.json are copied
 # where available (npm@5+)
-COPY ./simple_unit/package.json ./
+COPY ./download_unit/package.json ./
 COPY ./.env ./
 
 RUN echo "unitId=${unitId}\n requestTimeout=${requestTimeout}\n logsExpire=${logsExpire}\n redisHost=${redisHost}\n redisPort=${redisPort}" >> .env
@@ -22,6 +22,6 @@ RUN npm install
 # RUN npm ci --only=production
 
 # Bundle app source
-COPY ./simple_unit .
+COPY ./download_unit .
 
 CMD [ "node", "-r", "esm", "service.js" ]
